--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "firebase": "^11.3.1",
     "gh-pages": "^6.3.0",
@@ -20,7 +21,8 @@
     "jspdf": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "react-to-print": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
